--- a/arch/arm64/boot/dts/qcom/msm8916-coolpad-coolpady80d.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-coolpad-coolpady80d.dts
@@ -53,7 +53,7 @@
                 compatible = "mdss,otm9605a-lide-550";
                 reg = <0>;
 
-                reset-gpios = <78 25 0>;
+                reset-gpios = <&msmgpio 25 GPIO_ACTIVE_HIGH>;
 
                 port {
                         panel_in: endpoint {
