--- a/arch/arm64/boot/dts/qcom/msm8916-coolpad-coolpady80d.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-coolpad-coolpady80d.dts
@@ -131,6 +131,21 @@
 		drive-strength = <2>;
 		bias-pull-down;
 	};
+	mdss_default: mdss-default-state {
+		pins = "gpio25";
+		function = "gpio";
+
+		drive-strength = <8>;
+		bias-disable;
+	};
+
+	mdss_sleep: mdss-sleep-state {
+		pins = "gpio25";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-pull-down;
+	};
 	usb_id_default: usb-id-default-state {
 		pins = "gpio110";
 		function = "gpio";
