squash! MSM8916: drm/panel: Generate using linux-mdss-dsi-panel-driver-generator
X-Code-Generator: msm8916-mainline/linux-panel-drivers@b891186
Signed-off-by: lmdpdg <lmdpdg@localhost>

--- a/drivers/gpu/drm/panel/msm8916-generated/Kconfig
+++ b/drivers/gpu/drm/panel/msm8916-generated/Kconfig
@@ -25,6 +25,34 @@ config DRM_PANEL_ASUS_Z010D_R69339
 	tristate "Asus Z010D R69339"
 	default DRM_PANEL_MSM8916_GENERATED
 
+config DRM_PANEL_COOLPAD_HIMAX8389C_YASHI
+	tristate "Coolpad HIMAX8389C YASHI"
+	default DRM_PANEL_MSM8916_GENERATED
+
+config DRM_PANEL_COOLPAD_HIMAX8389C_YASHIOTP
+	tristate "Coolpad HIMAX8389C YASHIOTP"
+	default DRM_PANEL_MSM8916_GENERATED
+
+config DRM_PANEL_COOLPAD_OTM9605A_BOYIOTP
+	tristate "Coolpad OTM9605A BOYIOTP"
+	default DRM_PANEL_MSM8916_GENERATED
+
+config DRM_PANEL_COOLPAD_OTM9605A_DIJING
+	tristate "Coolpad OTM9605A DIJING"
+	default DRM_PANEL_MSM8916_GENERATED
+
+config DRM_PANEL_COOLPAD_OTM9605A_LIDE
+	tristate "Coolpad OTM9605A LIDE"
+	default DRM_PANEL_MSM8916_GENERATED
+
+config DRM_PANEL_COOLPAD_OTM9605A_OUFEI
+	tristate "Coolpad OTM9605A OUFEI"
+	default DRM_PANEL_MSM8916_GENERATED
+
+config DRM_PANEL_COOLPAD_OTM9605A_YASHI
+	tristate "Coolpad OTM9605A YASHI"
+	default DRM_PANEL_MSM8916_GENERATED
+
 config DRM_PANEL_HUAWEI_BOE_OTM8019A
 	tristate "Huawei BOE OTM8019A"
 	default DRM_PANEL_MSM8916_GENERATED
