Things work now. USB networking works. eMMC works. Directly copying some files also make WCNSS work.

--- a/arch/arm64/boot/dts/qcom/msm8916-coolpad-coolpady80d.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-coolpad-coolpady80d.dts
@@ -70,6 +70,9 @@
         qcom,dsi-phy-regulator-ldo-mode;
 };
 
+&gcc {
+	clocks = <&xo_board>, <&sleep_clk>, <0>, <0>, <0>, <0>, <0>;
+};
 //USB-ID pin "present", but occupied by UART.
 //This PM8916 inplementation is used as a workaround
 &pm8916_usbin {
