Added surnia display panel mipi_mot_video_inx_qhd_450_v1.

--- a/drivers/gpu/drm/panel/msm8916-generated/Kconfig
+++ b/drivers/gpu/drm/panel/msm8916-generated/Kconfig
@@ -77,6 +77,10 @@ config DRM_PANEL_MOTOROLA_SURNIA_BOE
 	tristate "Motorola SURNIA BOE"
 	default DRM_PANEL_MSM8916_GENERATED
 
+config DRM_PANEL_MOTOROLA_SURNIA_INX
+	tristate "Motorola SURNIA INX"
+	default DRM_PANEL_MSM8916_GENERATED
+
 config DRM_PANEL_SAMSUNG_EA8061_AMS549BU19_ID400418
 	tristate "Samsung EA8061 AMS549BU19 ID400418"
 	default DRM_PANEL_MSM8916_GENERATED
